# sparkboard

./: .gitignore  Cargo.toml  README.md  build.sh
examples/: fetch.rs
src/: epd.rs  epd7in5_v2.rs  epd7in5bc.rs  fetch.rs  graphics.rs  main.rs
