[package]
name = "sparkboard"
version = "1.0.0"
description = "Periodically downloads images over HTTP, dithers them, and displays them on an e-paper display. Runs on Raspberry Pi."
authors = ["Tommy van der Vorst <tommy@pixelspark.nl>"]
edition = "2018"

[dependencies]
rppal = { version = "0.11.3" }
embedded-graphics = { version = "0.6.1" }
reqwest = { version = "0.10", features = ["blocking", "rustls-tls"], default_features = false }
tokio = { version = "0.2", features = ["full"] }
png = "0.16.8"
dither = "1.3.9"
bytes = "1.0.0"
spidev = "0.4.0"
env_logger = "^0.8.2"
log = "^0.4.11"
chrono = "0.4"
clap = "^2.33.3"